Fix text align on Flickr photo overlay

--- a/css/flickr.css
+++ b/css/flickr.css
@@ -21,6 +21,7 @@
 }
 
 .flickr-overlay {
+	text-align: left;
 	display: block;
 	height: 100%;
 	background: linear-gradient(0deg,rgba(0,0,0,.9) 0,transparent 50%,transparent);
